Fix z-index of color picker too large

--- a/utils/gui-settings/gui-settings.scss
+++ b/utils/gui-settings/gui-settings.scss
@@ -406,7 +406,7 @@ button.save.save-complete
     left: -64px;
     transform: scale(0);
     transform-origin: top;
-    z-index: 100;
+    z-index: 9;
 }
 .predefined-colors.opened
 {
